Lisää css-muotoiluja

--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(30px + 2vmin);
+  font-family: 'Faster One', cursive;
   text-transform: uppercase;
   color: white;
   padding: 20px;
